--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <title>My Website.</title>
   </head>
   <body>
     <h1>Welcome to My Website</h1>
